<resources>
    <string name="app_name" translatable="false">Euro-Sportring</string>
    <string name="create_account">Create account</string>
    <string name="view_all_rounds">Match schedule</string>
    <string name="sign_in">Sign in</string>
    <string name="update">Update</string>
    <string name="update_available">Update Available</string>
    <string name="app_version" formatted="false">Version %1$s</string>
    <string name="favorites">Favourites</string>
    <string name="tournament">Tournament</string>
    <string name="teams">Teams</string>
    <string name="final_placings">Final placings</string>
    <string name="final_placings_title">FINAL PLACINGS</string>
    <string name="placing_text_holder">Placing</string>
    <string name="team">Team</string>
    <string name="match_info">Match Info</string>
    <string name="age_categories">Age categories</string>
    <string name="settings">Settings</string>
    <string name="title_activity_favourites" translatable="false">FAVOURITES</string>
    <string name="loading">Loading</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="surname">Surname</string>
    <string name="firstname">First name</string>
    <string name="role">Select role</string>
    <string name="error">Error</string>
    <string name="email_verification">Email Verification</string>
    <string name="button_ok">Ok</string>
    <string name="select_tournament">Select tournament</string>
    <string name="select_default_tournament">Select default tournament</string>
    <string name="round">Round</string>
    <string name="select_language">Select language</string>
    <string name="register_success">Please check your inbox to verify your email address and complete your account registration</string>
    <string name="update_profile_message">Profile updated successfully.</string>
    <string name="default_tournament">Default tournament selected </string>
    <string name="get_otp">Submit</string>
    <string name="an_otp_will_be_sent_to_mention_email_address">Enter your email address and we\'ll send you an email to reset your password.</string>
    <string name="logout">Log out</string>
    <string name="notification_and_sounds">Notifications &amp; sounds</string>
    <string name="help">Help</string>
    <string name="privacy_terms">Privacy &amp; terms</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="sound_notification">Sound</string>
    <string name="vibration_notification">Vibration</string>
    <string name="notification">Notifications</string>
    <string name="view_club_match">View all club matches</string>
    <string name="view_league_table">Group details</string>
    <string name="league_table">league table</string>
    <string name="no_data_available">No data available</string>
    <string name="venue">Venue</string>
    <string name="group_summary">GROUP SUMMARY</string>
    <string name="G" translatable="false">G</string>
    <string name="W" translatable="false">W</string>
    <string name="D" translatable="false">D</string>
    <string name="L" translatable="false">L</string>
    <string name="A" translatable="false">A</string>
    <string name="F" translatable="false">F</string>
    <string name="plus_minus" translatable="false">+/-</string>
    <string name="P" translatable="false">P</string>
    <string name="matches">Matches</string>
    <string name="game_information">Game information</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="CLUBS">CLUBS</string>
    <string name="CATEGORY">CATEGORY</string>
    <string name="GROUPS">GROUPS</string>
    <string name="match_id">Match ID:</string>
    <string name="progres_text_0" translatable="false">0</string>
    <string name="no_matches_available">No matches available</string>
    <string name="no_league_data_available">No league data available</string>
    <string name="hint_search_age_category">Search age category</string>
    <string name="hint_search_club">Search clubs</string>
    <string name="hint_search_groups">Search groups</string>
    <string name="view_on_map">View on map</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="internet_message">No internet connection is detected.</string>
    <string name="na">N/A</string>
    <string name="team_matches">Team Matches</string>
    <string name="password_do_not_match">The passwords entered do not match</string>
    <string name="set_favourite">Favourite</string>
    <string name="set_defaault">Default</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="we_have_sent_password_reset_link">We have sent a password reset link to your email address.</string>
    <string name="location_name">Location:</string>
    <string name="pitch_name">Pitch:</string>
    <string name="address">Address:</string>
    <string name="pitch_type">Type:</string>
    <string name="close">Close</string>
    <string name="is_the_winner">is the winner</string>
    <string name="deafult_tournament_cannot_be_removed_from_favourite">Default tournament cannot be removed from favourite.</string>
    <string name="title_activity_venue_map">Venue map</string>
    <string name="placing_matches_summary">PLACING MATCHES SUMMARY</string>
    <string name="euro_sportring_contact">Euro-Sportring Contact</string>
    <string name="name">Name:</string>
    <string name="comments">Comments</string>
    <string name="contact_number">Contact number:</string>
    <string name="no_tournament_selected_as_default">No default tournament selected.</string>
    <string name="the_internet_connection_appears_to_be_offline" translatable="false">The internet connection appears to be offline.</string>
    <string name="update_message">An app update is available. Please update the version you are using.</string>
    <string name="update_message_new">An updated version of this app is now available to download.</string>
    <string name="privacy_and_cookie_policy_title">Privacy and cookie policy at TMP Applications BV</string>
    <string name="which_personal_data_are_processed">WHICH PERSONAL DATA ARE PROCESSED?</string>
    <string name="privacy_terms_text_2">- Your first name and surname\n- Your preferred tournament details\n- Your e-mail address\n- Your IP address</string>
    <string name="privacy_terms_text_1">TMP Applications BV produces software applications for the international tournaments. In this Privacy Statement we inform you about the purposes for which TMP Applications BV processes personal data and about exercising your privacy rights.</string>
    <string name="why_app_needs_data">WHICH PERSONAL DATA IS PROCESSED?</string>
    <string name="privacy_terms_text_3">TMP Applications BV processes the following:\n	•	your e-mail address\n	•	your IP address\n\nTMP Applications BV may use your data to inform you from time to time about international tournaments.</string>
    <string name="how_long_retains_data">HOW LONG DOES TMP APPLICATIONS BV STORE DATA?</string>
    <string name="privacy_terms_text_4">If not otherwise agreed, TMP Applications BV stores personal data for a period of three years.</string>
    <string name="sharing_with_others">SHARING WITH OTHERS</string>
    <string name="privacy_terms_text_5">TMP Applications BV will only share personal data with a third party for the purpose mentioned before.</string>
    <string name="accessing_correcting_or_removing_data">ACCESSING, CORRECTING OR REMOVING DATA</string>
    <string name="privacy_terms_text_6">Please contact TMP Applications BV if you feel that your data is not being protected properly, if there are signs of misuse, or if you would like more information about the protection of personal data collected by TMP Applications BV.You have the right to access, correct or remove your personal data, which you can do by sending a request by mail to TMP Applications BV. TMP Applications BV will respond to your request as quickly as possible, but within four weeks at the very latest.\nBesides sending us a message, you have the right to submit a complaint to the Dutch Data Protection Authority. Contact details can be found at www.autoriteitpersoonsgegevens.nl</string>
    <string name="protecting_data">PROTECTING DATA</string>
    <string name="privacy_terms_text_7">TMP Applications BV recognizes the need to protect personal data and takes appropriate measures to prevent misuse, loss, unauthorized access, unwanted disclosure and unauthorized modification. The TMP Applications BV software uses a reliable SSL Certificate, stored in an encrypted website, to ensure that personal data does not fall into the wrong hands.</string>
    <string name="privacy_terms_text_8">TMP Applications BV, the Netherlands: info@tmpapplications.com\nTMP Applications BV is registered at the Dutch Chamber of Commerce under number 71729461.</string>
    <string name="password_must_be_at_least_5_char_long">Your password must be at least 5 characters long</string>
    <string name="remember_me">Remember me</string>
    <string name="walkover_win">* Walkover, win awarded</string>
    <string name="penalties_win">* Game won on penalties</string>
    <string name="abandoned_win">* Abandoned, win awarded</string>
    <string name="standings">STANDINGS</string>
    <string name="terms_of_use">By continuing you accept our <u>Terms of Use</u>.</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="german">German</string>
    <string name="dutch">Dutch</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="polish">Polish</string>
    <string name="player">Player</string>
    <string name="coach_manager_trainer">Coach/Manager/Trainer</string>
    <string name="other">Other</string>
    <string name="placing">Placing: </string>
    <string name="preview">Preview</string>
    <string name="preview_message">This tournament is currently in preview status. More details about the tournament will be available nearer the start date.</string>
    <string name="select_role">Role</string>
    <string name="select_your_country">Select your country</string>
    <string-array name="role_array">
        <item>@string/role</item>
        <item>@string/player</item>
        <item>@string/coach_manager_trainer</item>
        <item>@string/other</item>
    </string-array>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="view_graphic"><u>View schedule</u></string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="enter_code_to_follow_another_tournament">Enter a code to follow another tournament</string>
    <string name="tournament_code">Tournament code</string>
    <string name="tournament_code_not_recognised">The tournament code was not recognised</string>
</resources>