<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:title="@string/CLUBS"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/view_line"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_group_table_title"
                style="@style/text_black_sub_title"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/group_26_league_table"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/G"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/W"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/D"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/L"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/F_A"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/plus_minus"
                android:textStyle="bold" />

            <TextView
                style="@style/text_black_sub_title"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/P"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/ll_group_rows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>