<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tournamentDate"
            style="@style/text_black_sub_title"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/enter_code_to_follow_another_tournament"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_enter_access_code"
            style="@style/app_edittext"
            android:layout_marginTop="14dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/tournament_code"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/error_msg"
            style="@style/text_black_sub_title"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/tournament_code_not_recognised"
            android:textColor="@color/error_red"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/text_black_title"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_disable"
            android:text="@string/update" />

    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_line" />
</LinearLayout>