<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tl_group_rows"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/tr_group_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/view_line"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/tv_group_table_title"
            style="@style/text_black_sub_title"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_span="8"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <TextView
            style="@style/text_black_sub_title"
            android:layout_width="wrap_content"
            android:gravity="left|center"
            android:text="@string/G"
            android:textStyle="bold" />

        <TextView
            style="@style/text_black_sub_title"
            android:layout_width="wrap_content"
            android:gravity="left|center"
            android:text="@string/plus_minus"
            android:textStyle="bold" />

        <TextView
            style="@style/text_black_sub_title"
            android:layout_width="wrap_content"
            android:gravity="left|center"
            android:text="@string/P"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>