<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_help"
            style="@style/text_black_sub_title"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/icon_help"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="left"
            android:text="@string/help" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lightGray" />


        <TextView
            android:id="@+id/tv_privacy_terms"
            style="@style/text_black_sub_title"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/icon_privacy"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="left"
            android:text="@string/privacy_terms" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/tv_profile"
            style="@style/text_black_sub_title"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/icon_profile"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="left"
            android:text="@string/profile" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lightGray" />


        <TextView
            android:id="@+id/tv_notification"
            style="@style/text_black_sub_title"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/icon_notification"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="left"
            android:text="@string/notification_and_sounds" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lightGray" />


        <TextView
            android:id="@+id/tv_logout"
            style="@style/text_black_sub_title"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/icon_logout"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="left"
            android:text="@string/logout" />

    </LinearLayout>

    <include
        android:id="@+id/home_footer"
        layout="@layout/layout_footer" />


</LinearLayout>
